--- a/day1.html
+++ b/day1.html
@@ -6,20 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-        'use strict'
+    <script src="day2.js">
+        // ===========================for console===================================
+        // 'use strict'
     
-        var num=55;
-        console.log(num)
-        console.log(typeof(num))   
+    //     var num=55;
+    //     console.log(num)
+    //     console.log(typeof(num))   
 
-       var num=55123456789876543212;
-        console.log(num)
-        console.log(typeof(num)) 
+    //    var num=55123456789876543212;
+    //     console.log(num)
+    //     console.log(typeof(num)) 
 
-        var num=55123456789876543212n;
-        console.log(num)
-        console.log(typeof(num)) 
+    //     var num=55123456789876543212n;
+    //     console.log(num)
+    //     console.log(typeof(num)) 
         </script> 
+        <!-- -----------------------<script src="link second page like day2.js"></script>----------------------- -->
+
+        
 </body>
 </html>
