--- a/day1.html
+++ b/day1.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <button onclick="run()">start</button>
     <script src="day2.js">
         // ===========================for console===================================
         // 'use strict'
@@ -21,6 +22,9 @@
     //     var num=55123456789876543212n;
     //     console.log(num)
     //     console.log(typeof(num)) 
+  
+
+
         </script> 
 
                 <!-- -----------------------<script src="link second page like day2.js"></script>----------------------- -->
