--- a/day1.html
+++ b/day1.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <button onclick="run()">start</button>
+    <p id="text"></p>
+    
     <script src="day2.js">
         // ===========================for console===================================
         // 'use strict'
@@ -22,7 +24,6 @@
     //     var num=55123456789876543212n;
     //     console.log(num)
     //     console.log(typeof(num)) 
-  
 
 
         </script> 
