--- a/day1.html
+++ b/day1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <button onclick="run()">start</button>
-    <p id="text"></p>
+    <p id="text">Hello</p>
     
     <script src="day2.js">
         // ===========================for console===================================
