--- a/day1.html
+++ b/day1.html
@@ -8,6 +8,7 @@
 <body>
     <button onclick="run()">start</button>
     <p id="text">Hello</p>
+    <div id="dot"> krishnkant </div>
     
     <script src="day2.js">
         // ===========================for console===================================
