--- a/day1.html
+++ b/day1.html
@@ -6,8 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <button onclick="run()">start</button>
-    <p id="text">Hello</p>
+    <!-- <button onclick="run()">start</button> -->
+    <!-- <button onmouseenter="run()">start</button> -->
+    <button onclick="inc()">increment</button>
+    <button onclick="dec()">decrement</button>
+
+
+    <p id="text">0</p>
     <div id="dot"> krishnkant </div>
     
     <script src="day2.js">
